# Duet3D-CoreN2G

./: CMakeLists.txt
src/: Core.h  CoreIO.cpp
src/SAME5x_C21/: AnalogOut.cpp  AsyncSerial.h  Interrupts.cpp  Serial.cpp  Serial.h
src/SAME5x_C21/SAME5x/: Sdhc.cpp  SerialCDC.cpp  Vectors.c
src/SAME5x_C21/SAME5x/hal/utils/include/: parts.h
src/SAME5x_C21/SAME5x/hri/: hri_adc_e54.h  hri_dmac_e54.h  hri_eic_e54.h  hri_mclk_e54.h  hri_supc_e54.h  hri_trng_e54.h  hri_usb_e54.h
src/atmel/SAME51_DFP/1.1.139/include/: same51j20a.h
src/atmel/SAME54_DFP/1.1.134/include/: same54.h
